--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft.cshtml
@@ -99,7 +99,7 @@
                 <div class="col-sm-4 col-xs-12 header-middle">
                     <div class="header-middle-top">
                         <div id="logo">
-                            <a href="index.html"><img src="~/Public/image/logo.png" title="E-Commerce" alt="E-Commerce" class="img-responsive" /></a>
+                            <a href="/Home/Index"><img src="~/Public/image/logo.png" title="E-Commerce" alt="E-Commerce" class="img-responsive" /></a>
                         </div>
                     </div>
                 </div>
@@ -314,7 +314,7 @@
                         <div class="panel-heading columnblock-title">Lọc</div>
                         <div class="filter-block">
                             <div class="list-group">
-                                <a class="list-group-item">Màu</a>
+                                <a class="list-group-item">Tìm kiếm</a>
                                 <div class="list-group-item">
                                     <input name="name" type="text" value="" placeholder="Nhập..."/>
                                 </div>
@@ -342,7 +342,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 product-grid-item">
                         <div class="product-thumb transition">
                             <div class="image product-imageblock">
-                                <a href="#"><img src="~/Public/image/product/product5.jpg" alt="women's clothing" title="women's clothing" class="img-responsive" /></a>
+                                <a href="/Product/DetailProduct?id=5"><img src="~/Public/image/product/product5.jpg" alt="women's clothing" title="women's clothing" class="img-responsive" /></a>
                                 <div class="button-group">
                                     <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
                                     <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
@@ -350,20 +350,16 @@
                                 </div>
                             </div>
                             <div class="caption product-detail">
-                                <h4 class="product-name"> <a href="product.html" title="women's clothing">Clothing</a> </h4>
-                                <p class="price product-price"> <span class="price-new">$254.00</span><span class="price-tax">Ex Tax: $210.00</span> </p>
+                                <h4 class="product-name"> <a href="/Product/DetailProduct?id=5" title="">Đậu phụ rán</a> </h4>
+                                <p class="price product-price"> <span class="price-new">3,500</span><span class="price-tax">3,500</span> </p>
                             </div>
-                            <div class="button-group">
-                                <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
-                                <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
-                            </div>
+
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 product-grid-item">
                         <div class="product-thumb transition">
                             <div class="image product-imageblock">
-                                <a href="#"><img src="~/Public/image/product/product1.jpg" alt="women's clothing" title="women's clothing" class="img-responsive" /></a>
+                                <a href="/Product/DetailProduct?id=1"><img src="~/Public/image/product/product1.jpg" alt="women's clothing" title="" class="img-responsive" /></a>
                                 <div class="button-group">
                                     <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
                                     <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
@@ -371,14 +367,10 @@
                                 </div>
                             </div>
                             <div class="caption product-detail">
-                                <h4 class="product-name"> <a href="product.html" title="women's clothing">Clothing</a> </h4>
-                                <p class="price product-price"> <span class="price-new">$254.00</span><span class="price-tax">Ex Tax: $210.00</span> </p>
+                                <h4 class="product-name"> <a href="/Product/DetailProduct?id=1" title="">Gừng mật ong</a> </h4>
+                                <p class="price product-price"> <span class="price-new">70,000</span><span class="price-tax">90,000</span> </p>
                             </div>
-                            <div class="button-group">
-                                <button type="button" class="wishlist" data-toggle="tooltip" title="Add to Wish List"><i class="fa fa-heart-o"></i></button>
-                                <button type="button" class="addtocart-btn">Thêm vào giỏ</button>
-                                <button type="button" class="compare" data-toggle="tooltip" title="Compare this Product"><i class="fa fa-exchange"></i></button>
-                            </div>
+
                         </div>
                     </div>
                 </div>
