--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft2.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutLeft2.cshtml
@@ -97,7 +97,7 @@
                 <div class="col-sm-4 col-xs-12 header-middle">
                     <div class="header-middle-top">
                         <div id="logo">
-                            <a href="index.html"><img src="~/Public/image/logo.png" title="E-Commerce" alt="E-Commerce" class="img-responsive" /></a>
+                            <a href="/Home/Index"><img src="~/Public/image/logo.png" title="E-Commerce" alt="E-Commerce" class="img-responsive" /></a>
                         </div>
                     </div>
                 </div>
