--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutRight.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_layoutRight.cshtml
@@ -97,7 +97,7 @@
                 <div class="col-sm-4 col-xs-12 header-middle">
                     <div class="header-middle-top">
                         <div id="logo">
-                            <a href="index.html"><img src="~/Public/image/logo.png" title="E-Commerce" alt="E-Commerce" class="img-responsive" /></a>
+                            <a href="/Home/Index"><img src="~/Public/image/logo.png" title="E-Commerce" alt="E-Commerce" class="img-responsive" /></a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                         }
                         else
                         {
-                            <button type="button" class="btn btn-inverse btn-block btn-lg dropdown-toggle cart-dropdown-button">
+                            @*<button type="button" class="btn btn-inverse btn-block btn-lg dropdown-toggle cart-dropdown-button">
                                 <span id="cart-total">
                                     <span class="cart-title">Giỏ hảng</span><br>
                                     1 sản phẩm
@@ -190,7 +190,7 @@
                                         <p class="text-right"> <span class="btn-viewcart"><a href="\Cart\Index"><strong><i class="fa fa-shopping-cart"></i> View Cart</strong></a></span> <span class="btn-checkout"><a href="" \CheckOut\Index""><strong><i class="fa fa-share"></i> Checkout</strong></a></span>                                        </p>
                                     </div>
                                 </li>
-                            </ul>
+                            </ul>*@
                         }
                     </div>
                 </div>
@@ -228,12 +228,12 @@
                     <div class="columnblock-title">Danh mục</div>
                     <div class="blog-categories-block category_block">
                         <div class="list-group">
-                            <a class="list-group-item" href="#">Lương thực</a>
-                            <a class="list-group-item" href="#">Thực phẩm chế biến</a>
-                            <a class="list-group-item" href="#">Thực phẩm đóng hộp</a>
-                            <a class="list-group-item" href="#">Gia vị</a>
-                            <a class="list-group-item" href="#">Thực phẩm tươi sống</a>
-                            <a class="list-group-item last" href="#">Thực phẩm khác</a>
+                            <a class="list-group-item" href="/Categories/Index?CategoriesID=1">Lương thực</a>
+                            <a class="list-group-item" href="/Categories/Index?CategoriesID=3">Thực phẩm chế biến</a>
+                            <a class="list-group-item" href="/Categories/Index?CategoriesID=4">Thực phẩm đóng hộp</a>
+                            <a class="list-group-item" href="/Categories/Index?CategoriesID=5">Gia vị</a>
+                            <a class="list-group-item" href="/Categories/Index?CategoriesID=6">Thực phẩm tươi sống</a>
+                            <a class="list-group-item last" href="/Categories/Index?CategoriesID=8">Thực phẩm khác</a>
                         </div>
                     </div>
                 </div>
