--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/ReviewAdmin/Index.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/ReviewAdmin/Index.cshtml
@@ -50,18 +50,26 @@
                                 @if (rv[i] == 1)
                                 {
                                     <td style="color:blue">Đã trả lời</td>
+                                    <td>
+                                        <div>
+                                            <a href="Reply/@reviews[i].ReviewID">
+                                                <button type="button" class="btn btn-primary waves-effect waves-light" onclick="">Xem</button>
+                                            </a>
+                                        </div>
+                                    </td>
                                 }
                                 else
                                 {
                                     <td style="color:red">Chưa trả lời</td>
+                                    <td>
+                                        <div>
+                                            <a href="Reply/@reviews[i].ReviewID">
+                                                <button type="button" class="btn btn-primary waves-effect waves-light" onclick="">Trả lời</button>
+                                            </a>
+                                        </div>
+                                    </td>
                                 }
-                                <td>
-                                    <div>
-                                        <a href="Reply/@reviews[i].ReviewID">
-                                            <button type="button" class="btn btn-primary waves-effect waves-light" onclick="">Trả lời</button>
-                                        </a>
-                                    </div>
-                                </td>
+
                             </tr>
                         }
                     </tbody>
