--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -252,14 +252,14 @@
                             <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-bell fa-fw"></i>
                                 <!-- Counter - Alerts -->
-                                <span class="badge badge-danger badge-counter">3+</span>
+                                <span class="badge badge-danger badge-counter">0</span>
                             </a>
                             <!-- Dropdown - Alerts -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
                                 <h6 class="dropdown-header">
-                                    Alerts Center
+                                    Thông báo
                                 </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
+                                @*<a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="mr-3">
                                         <div class="icon-circle bg-primary">
                                             <i class="fas fa-file-alt text-white"></i>
@@ -291,8 +291,8 @@
                                         <div class="small text-gray-500">December 2, 2019</div>
                                         Spending Alert: We've noticed unusually high spending for your account.
                                     </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+                                </a>*@
+                                <a class="dropdown-item text-center small text-gray-500" href="#">Xem tất cả thông báo</a>
                             </div>
                         </li>
 
@@ -301,14 +301,14 @@
                             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-envelope fa-fw"></i>
                                 <!-- Counter - Messages -->
-                                <span class="badge badge-danger badge-counter">7</span>
+                                <span class="badge badge-danger badge-counter">0</span>
                             </a>
                             <!-- Dropdown - Messages -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="messagesDropdown">
                                 <h6 class="dropdown-header">
-                                    Message Center
+                                    Tin nhắn
                                 </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
+                                @*<a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
                                         <img class="rounded-circle" src="~/Areas/Admin/Public/img/undraw_profile_1.png" alt="...">
                                         <div class="status-indicator bg-success"></div>
@@ -347,8 +347,8 @@
                                         <div class="text-truncate">Am I a good boy? The reason I ask is because someone told me that people say this to all dogs, even if they aren't good...</div>
                                         <div class="small text-gray-500">Chicken the Dog · 2w</div>
                                     </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
+                                </a>*@
+                                <a class="dropdown-item text-center small text-gray-500" href="#">Xem tất cả tin nhắn</a>
                             </div>
                         </li>
 
@@ -427,12 +427,12 @@
     </div>
 
     <!-- Phân quyền  -->
-    <script>
+     <script>
         var sessionid = document.getElementById('sessionid').value;
-        if (sessionid == '') {
+         if (sessionid == '' || sessionid != 1) {
             window.location.href = "/Account/Login";
         }
-    </script>
+    </script> 
 
     <!-- jQuery  -->
     @Scripts.Render("~/Areas/Admin/assets/js/jquery.min.js")
