--- a/CuaHangThucPham/CuaHangThucPham/Views/Product/DetailProduct.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Product/DetailProduct.cshtml
@@ -4,6 +4,8 @@
     Layout = "~/Views/Shared/_layoutLeft.cshtml";
     var product = (List<CuaHangThucPham.Models.Product>)ViewBag.Product;
     var products = (List<CuaHangThucPham.Models.Product>)ViewBag.Products;
+    var reviewCus = (List<CuaHangThucPham.Models.Review>)ViewBag.reviewCus;
+    var reviewAdmin = (List<CuaHangThucPham.Models.Review>)ViewBag.rv;
 }
 <div id="content" class="col-sm-9">
     <div class="row">
@@ -26,7 +28,7 @@
             <div class="rating product">
                 <span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span> <span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
                 <span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span> <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span> <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span>
-                <span class="review-count"> <a href="#" onClick="$('a[href=\'#tab-review\']').trigger('click'); return false;">1 bình luận</a></span>
+                <span class="review-count"> <a href="#" onClick="$('a[href=\'#tab-review\']').trigger('click'); return false;">@ViewBag.dembinhluan bình luận</a></span>
                 <hr>
                 <!-- AddThis Button BEGIN -->
                 <div class="addthis_toolbox addthis_default_style">
@@ -39,9 +41,9 @@
             </div>
             <ul class="list-unstyled productinfo-details-top">
                 <li>
-                    <h2 class="productpage-price">@string.Format("{0:#,##0}", product[0].PriceOld) đ</h2>
+                    <h2 class="productpage-price">@string.Format("{0:#,##0}", product[0].PriceNew) đ</h2>
                 </li>
-                <li><span class="productinfo-tax">Giá cũ: @string.Format("{0:#,##0}", product[0].PriceNew) đ</span></li>
+                <li><span class="productinfo-tax">Giá cũ: @string.Format("{0:#,##0}", product[0].PriceOld) đ</span></li>
             </ul>
             <hr>
             <ul class="list-unstyled product_info">
@@ -76,7 +78,7 @@
     <div class="productinfo-tab">
         <ul class="nav nav-tabs">
             <li class="active"><a href="#tab-description" data-toggle="tab">Mô tả</a></li>
-            <li><a href="#tab-review" data-toggle="tab">Bình luận (1)</a></li>
+            <li><a href="#tab-review" data-toggle="tab">Bình luận (@ViewBag.dembinhluan)</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane active" id="tab-description">
@@ -88,36 +90,79 @@
                 <!-- cpt_container_end -->
             </div>
             <div class="tab-pane" id="tab-review">
-                <form class="form-horizontal">
+                <form class="form-horizontal" method="post" action="/Product/AddReview" enctype="multipart/form-data">
                     <div id="review"></div>
                     <h2>Viết bình luận</h2>
-                    <div class="form-group required">
-                        <div class="col-sm-12">
-                            <label class="control-label" for="input-name">Họ tên</label>
-                            <input type="text" name="name" value="" id="input-name" class="form-control" />
+                    @for (int i = 0; i < reviewCus.Count; i++)
+                    {
+                        <div class="form-group">
+                            <div class="col-sm-12">
+                                <img style="width: 30px; height: 30px; border-radius: 50%; overflow: hidden;" src="/Public/image/customer/user.png" />
+                                <label class="control-label bold">@reviewCus[i].Customer.FirstName @reviewCus[i].Customer.LastName</label>
+                                <label class="control-label" style="color:green"> · Khách hàng</label>
+                                <br />
+                                <span style=" padding-left:30px" class="fa fa-1x">
+                                    @for (int j = 0; j < @reviewCus[i].NumStar; j++)
+                                    {
+                                        <i class="fa-solid fa-star" style="color: #d78a1d"></i>
+                                    }
+                                </span>
+                                <br />
+                                <label class="control-label" style=" padding-left:30px">@reviewCus[i].Comment</label>
+                                <br />
+                                <label class="control-label" style=" padding-left:30px; font-size:13px">@reviewCus[i].DateAdded</label>
+                                <br />
+                                <div style="padding-left:30px">
+                                    @if (reviewAdmin[i] != null)
+                                    {
+                                        <img style="width: 30px; height: 30px; padding-left: 0px; border-radius: 50%; overflow: hidden;" src="/Public/image/customer/customer-service.png" />
+                                        <label class="control-label bold">@reviewAdmin[i].Customer.FirstName @reviewAdmin[i].Customer.LastName</label>
+                                        <label class="control-label" style="color:blue"> · Nhân viên CSKH</label>
+                                        <br />
+                                        <label class="control-label" style=" padding-left:30px">@reviewAdmin[i].Comment</label>
+                                        <br />
+                                        <label class="control-label" style=" padding-left:30px; font-size:13px">@reviewAdmin[i].DateAdded</label>
+                                    }
+                                </div>
+                                <hr>
+                            </div>
+
                         </div>
-                    </div>
-                    <div class="form-group required">
-                        <div class="col-sm-12">
-                            <label class="control-label" for="input-review">Bình luận</label>
-                            <textarea name="text" rows="5" id="input-review" class="form-control"></textarea>
+                    }
+                    @if (Session["id"] != null)
+                    {
+                        <div class="form-group required">
+                            <div class="col-sm-12">
+                                <label class="control-label" for="input-name">Họ tên</label>
+                                <input type="text" name="inputname" value="@Session["name"]" id="input-name" class="form-control" readonly/>
+                                <input type="text" name="idcus" value="@Session["id"]" id="input-name" hidden />
+                                <input type="text" name="idproduct" value="@product[0].ProductID" id="input-name" hidden />
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group required">
-                        <div class="col-sm-12">
-                            <label class="control-label">Đánh giá</label> &nbsp;&nbsp;&nbsp; Không tốt&nbsp;
-                            <input type="radio" name="rating" value="1" /> &nbsp;
-                            <input type="radio" name="rating" value="2" /> &nbsp;
-                            <input type="radio" name="rating" value="3" /> &nbsp;
-                            <input type="radio" name="rating" value="4" /> &nbsp;
-                            <input type="radio" name="rating" value="5" /> &nbsp;Tuyệt vời
+                        <div class="form-group required">
+                            <div class="col-sm-12">
+                                <label class="control-label" for="input-review">Bình luận</label>
+                                <textarea name="inputreview" rows="5" id="input-review" class="form-control"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="buttons clearfix">
-                        <div class="pull-right">
-                            <button type="button" id="button-review" data-loading-text="Loading..." class="btn btn-primary" onclick="myFunction()">Gửi</button>
+                        <div class="form-group required">
+                            <div class="col-sm-12">
+                                <label class="control-label">Đánh giá</label> &nbsp;&nbsp;&nbsp; Không tốt&nbsp;
+                                <input type="radio" name="rating" value="1" /> &nbsp;
+                                <input type="radio" name="rating" value="2" /> &nbsp;
+                                <input type="radio" name="rating" value="3" /> &nbsp;
+                                <input type="radio" name="rating" value="4" /> &nbsp;
+                                <input type="radio" name="rating" value="5" /> &nbsp;Tuyệt vời
+                            </div>
                         </div>
-                    </div>
+                        <div class="buttons clearfix">
+                            <div class="pull-right">
+                                @*<button type="button" id="button-review" data-loading-text="Loading..." class="btn btn-primary" onclick="myFunction()">Gửi</button>*@
+                                <button type="submit" id="button-review" data-loading-text="Loading..." class="btn btn-primary">Gửi</button>
+                            </div>
+                        </div>
+                    }
+
                 </form>
             </div>
         </div>
@@ -139,7 +184,7 @@
                         </div>
                         <div class="caption product-detail">
                             <h4 class="product-name"><a href="/Product/DetailProduct/@products[i].ProductID" title="Xem chi tiết">@products[i].ProductName</a></h4>
-                            <p class="price product-price"> <span class="price-new">@products[i].PriceNew</span> <span class="price-old">@products[i].PriceOld</span> <span class="price-tax">Ex Tax: $210.00</span> </p>
+                            <p class="price product-price"> <span class="price-new">@string.Format("{0:#,##0}", products[i].PriceNew)</span> <span class="price-old">@string.Format("{0:#,##0}", products[i].PriceOld)</span> <span class="price-tax">Ex Tax: $210.00</span> </p>
                         </div>
                         <div class="button-group">
                             <button type="button" class="wishlist" data-toggle="tooltip" title="Thêm vào danh sách yêu thích"><i class="fa fa-heart-o"></i></button>
@@ -156,6 +201,6 @@
 
 <script>
     function myFunction() {
-        alert("Xin lỗi! Tính năng này đăng được phát triển");
+        alert("Xin lỗi! Tính năng này đang được phát triển");
     }
 </script>
