--- a/CuaHangThucPham/CuaHangThucPham/Views/Shared/_Layout.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
                 <div class="col-sm-4 col-xs-12 header-middle">
                     <div class="header-middle-top">
                         <div id="logo">
-                            <a href="index.html"><img src="~/Public/image/logo.png" title="E-Commerce" alt="E-Commerce" class="img-responsive" /></a>
+                            <a href="/Home/Index"><img src="~/Public/image/logo.png" title="E-Commerce" alt="E-Commerce" class="img-responsive" /></a>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                         }
                         else
                         {
-                            <button type="button" class="btn btn-inverse btn-block btn-lg dropdown-toggle cart-dropdown-button">
+                            @*<button type="button" class="btn btn-inverse btn-block btn-lg dropdown-toggle cart-dropdown-button">
                                 <span id="cart-total">
                                     <span class="cart-title">Giỏ hảng</span><br>
                                     1 sản phẩm
@@ -196,7 +196,7 @@
                                         <p class="text-right"> <span class="btn-viewcart"><a href="\Cart\Index"><strong><i class="fa fa-shopping-cart"></i> View Cart</strong></a></span> <span class="btn-checkout"><a href="" \CheckOut\Index""><strong><i class="fa fa-share"></i> Checkout</strong></a></span>                                        </p>
                                     </div>
                                 </li>
-                            </ul>
+                            </ul>*@
                         }
                     </div>
                 </div>
